--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -178,27 +178,13 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     # Check if nvidia-smi is available for GPU metrics
     if-shell "command -v nvidia-smi" {
         set -g @dracula-plugins "cpu-usage ram-usage gpu-ram-usage ssh-session network-bandwidth network"
-        # set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session network-bandwidth network"
-        # set -g @dracula-plugins "cpu-usage gpu-usage gpu-ram-usage gpu-power-draw custom"
-        # set -g @dracula-gpu-usage-label "󰢮"
-        # set -g @dracula-gpu-usage true
-        # set -g @dracula-gpu-ram-usage true
-        # set -g @dracula-gpu-power-draw true
 
-
-        # Custom scripts for additional system info
         set -g @dracula-cpu-usage-colors "cyan dark_gray"
         set -g @dracula-gpu-usage-colors "magenta dark_gray"
-        # set -g @dracula-custom-commands "cpu_info gpu_info"
-        # set -g @dracula-custom-command-cpu_info "#($HOME/dotfiles/system_info.sh cpu)"
-        # set -g @dracula-custom-command-gpu_info "#($HOME/dotfiles/system_info.sh gpu)"
-        # set -g @dracula-custom-label-cpu_info "󰻠"
-        # set -g @dracula-custom-label-gpu_info "󰢮""
-        
+        set -g @dracula-network-colors "yellow dark_gray"
     } {
         # Fallback for remote systems without GPU
         set -g @dracula-plugins "synchronize cpu-usage ram-usage ssh-session network-bandwidth network"
-        # set -g @dracula-custom-plugin-script "#[fg=cyan]#($HOME/dotfiles/system_info.sh cpu)"
     }
 
     set -g @dracula-show-powerline true
@@ -208,7 +194,7 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 } {
     # Local configuration (MacBook)
     set -g @plugin 'dracula/tmux'
-    set -g @dracula-plugins "synchronize cpu-usage ram-usage battery weather"
+    set -g @dracula-plugins "synchronize cpu-usage ram-usage weather time battery"
     set -g @dracula-show-powerline true
 
     # Local icon (laptop) + session name
@@ -217,21 +203,63 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     # Synchronize indicator settings
     set -g @dracula-synchronize-label "󰓦"
     set -g @dracula-synchronize-indicator "sync"
+    set -g @dracula-synchronize-colors "green dark_gray"
+
+    # CPU usage settings
+    set -g @dracula-cpu-usage-label "󰻠"
+    set -g @dracula-cpu-usage-colors "pink dark_gray"
+
+    # RAM usage settings
+    set -g @dracula-ram-usage-label ""
+    # set -g @dracula-ram-usage-label "󰍛"
+    set -g @dracula-ram-usage-colors "cyan dark_gray"
 
     # Battery settings
     set -g @dracula-battery-label "󰁹"
-    set -g @dracula-battery-colors "dark_purple white"
+    set -g @dracula-battery-colors "green dark_gray"
     set -g @dracula-battery-style "percentage"
     set -g @dracula-show-battery-percentage true
 
-    set -g @dracula-cpu-usage-colors "pink dark_gray"
+    # Time settings
+    set -g @dracula-time-colors "orange dark_gray"
 
     # Weather settings
-    set -g @dracula-weather-icon "󰖕"
+    set -g @dracula-weather-label "󰖐"
+    set -g @dracula-weather-colors "blue dark_gray"
     set -g @dracula-fixed-location "Vancouver"
-    set -g @dracula-show-fahrenheit false
-    set -g @dracula-show-location true
+    # set -g @dracula-show-fahrenheit false
+    # set -g @dracula-show-location true
 }
+
+# ethernet: 󰈀 󰒪 󰒍 󰌗 󰌘
+# offline: 󰖪  󱍢
+# wifi:      󰖩  󰘊 󰒢
+# 󰣀
+
+#
+# Available colors for Dracula widgets:
+# - dark_gray
+# - gray
+# - light_purple
+# - dark_purple
+# - cyan
+# - green
+# - orange
+# - red
+# - pink
+# - yellow
+# - white
+# - black
+# - purple
+# - light_gray
+# - blue
+# - dark_blue
+# - background (the default background color)
+# - foreground (the default foreground color)
+#
+# Each widget can be customized with the format:
+# set -g @dracula-[widget]-colors "[background] [foreground]"
+
 
 # Common visual settings
 # set -g @dracula-show-right-sep "#[fg=background]"
@@ -247,15 +275,20 @@ set -g @dracula-cpu-display-load true
 set -g @dracula-cpu-usage-colors "dark_gray white"
 set -g @dracula-show-cpu-usage true
 
-set -g @dracula-ram-usage-label "󰍛"
+# set -g @dracula-ram-usage-label "󰍛"
 set -g @dracula-ram-usage true
 set -g @dracula-ram-usage-colors "dark_purple white"
 set -g @dracula-show-ram-usage true
 
-# Common visual settings
-# set -g @dracula-show-right-sep "█"
-# set -g @dracula-show-right-sep "#[fg=dark_gray]"
+set -g @dracula-ram-usage-label ""
+set -g @dracula-gpu-power-label "󰢮"
+set -g @dracula-gpu-usage-label "󰢮"
+set -g @dracula-gpu-vram-label "󰢮"
 
+
+set -g @dracula-network-ethernet-label "󰈀 Eth"
+set -g @dracula-network-offline-label "󱍢 "
+set -g @dracula-network-wifi-label " "
 
 set -g @dracula-show-left-sep ""
 set -g @dracula-show-right-sep ""
