--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -182,7 +182,6 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
         set -g @dracula-cpu-usage-colors "cyan dark_gray"
         set -g @dracula-gpu-usage-colors "magenta dark_gray"
-        set -g @dracula-network-colors "yellow dark_gray"
     } {
         # Fallback for remote systems without GPU
         set -g @dracula-plugins "synchronize cpu-usage ram-usage ssh-session network-bandwidth network"
@@ -268,7 +267,8 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 # set -g @dracula-show-right-sep "#[fg=#002451]"
 # set -g @dracula-show-left-sep ""
 
-set -g @dracula-network-bandwidth-interval 10
+set -g @dracula-network-colors "pink dark_gray"
+set -g @dracula-network-bandwidth-interval 1
 # Shared settings for both environments
 # CPU and RAM display settings
 set -g @dracula-cpu-usage-label "󰻠"
@@ -289,7 +289,7 @@ set -g @dracula-gpu-vram-label "󰢮"
 
 set -g @dracula-network-ethernet-label "󰈀 Eth"
 set -g @dracula-network-offline-label "󱍢 "
-set -g @dracula-network-wifi-label " "
+set -g @dracula-network-wifi-label ""
 
 set -g @dracula-show-left-sep ""
 set -g @dracula-show-right-sep ""
