fixed tmux theme finally

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -178,10 +178,7 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
     # Check if nvidia-smi is available for GPU metrics
     if-shell "command -v nvidia-smi" {
-        set -g @dracula-plugins "cpu-usage ram-usage gpu-ram-usage ssh-session network-bandwidth network"
-
-        set -g @dracula-cpu-usage-colors "cyan dark_gray"
-        set -g @dracula-gpu-usage-colors "magenta dark_gray"
+        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage gpu-power-draw ssh-session network-bandwidth network"
     } {
         # Fallback for remote systems without GPU
         set -g @dracula-plugins "synchronize cpu-usage ram-usage ssh-session network-bandwidth network"
@@ -262,10 +259,10 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
 
 # Common visual settings
-# set -g @dracula-show-right-sep "#[fg=background]"
-# set -g @dracula-show-left-sep "#[fg=background]"
-# set -g @dracula-show-right-sep "#[fg=#002451]"
-# set -g @dracula-show-left-sep ""
+set -g @dracula-gpu-power-draw-colors "red dark_gray"
+set -g @dracula-gpu-ram-usage-colors "orange dark_gray"
+set -g @dracula-gpu-usage-colors "yellow dark_gray"
+
 
 set -g @dracula-network-colors "pink dark_gray"
 set -g @dracula-network-bandwidth-interval 1
@@ -282,6 +279,7 @@ set -g @dracula-ram-usage-colors "dark_purple white"
 set -g @dracula-show-ram-usage true
 
 set -g @dracula-ram-usage-label ""
+
 set -g @dracula-gpu-power-label "󰢮"
 set -g @dracula-gpu-usage-label "󰢮"
 set -g @dracula-gpu-vram-label "󰢮"
