--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-# vim:ft=conf:
+ # vim:ft=conf:
 
 # Primer: https://danielmiessler.com/study/tmux/
 # Tmux for mere mortals: https://zserge.com/posts/tmux/
@@ -103,7 +103,57 @@ set -g @plugin 'laktak/extrakto'
 # set -g @plugin 'shivamashtikar/tmux-onedark-theme'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'fcsonline/tmux-thumbs'
-# set -g @plugin 'tmux-plugins/tmux-copycat'
+
+
+bind-key | split-window -h -c '#{pane_current_path}' # normally prefix-%
+bind-key '\' split-window -h -c '#{pane_current_path}' # normally prefix-%
+bind-key - split-window -v -c '#{pane_current_path}' # normally prefix-"
+
+# Open split panes with the path of the current pane.
+unbind-key %
+bind-key % split-window -h -c '#{pane_current_path}'
+unbind-key '"'
+bind-key '"' split-window -v -c '#{pane_current_path}'
+
+# Same for new windows.
+unbind-key c
+bind-key c new-window -c '#{pane_current_path}'
+
+# Vim-like key bindings for pane navigation (default uses cursor keys).
+unbind-key h
+bind-key h select-pane -L
+unbind-key j
+bind-key j select-pane -D
+unbind-key k
+bind-key k select-pane -U
+unbind-key l # normally used for last-window
+bind-key l select-pane -R
+
+# Resizing (mouse also works).
+# Here, and in other binds, `-r` allows us to repeat without having to hit the
+# prefix (with repeat-time, which defaults to 500ms).
+unbind-key Left
+bind-key -r Left resize-pane -L 5
+unbind-key Right
+bind-key -r Right resize-pane -R 5
+unbind-key Down
+bind-key -r Down resize-pane -D 5
+unbind-key Up
+bind-key -r Up resize-pane -U 5
+
+# Fast toggle between current and last-used window (normally prefix-l).
+bind-key ^space last-window
+
+# `^space ^space` is awfully close to the destructive `^space space`, which
+# trashes the layout. Provide a quick way to get back to the previous-used
+# layout.
+#
+# prefix-p is normally used for previous-window, but I never use that,
+# prefering numeric access or the fast toggle above (prefix-^space).
+bind-key p select-layout -o
+
+bind-key -r '<' swap-window -d -t '{previous}' # Move window left.
+bind-key -r '>' swap-window -d -t '{next}' # Move window right.
 
 
 # set -g @dracula-colors "
@@ -178,10 +228,10 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
     # Check if nvidia-smi is available for GPU metrics
     if-shell "command -v nvidia-smi" {
-        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage gpu-power-draw ssh-session network-bandwidth network"
+        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session network-bandwidth"
     } {
         # Fallback for remote systems without GPU
-        set -g @dracula-plugins "synchronize cpu-usage ram-usage ssh-session network-bandwidth network"
+        set -g @dracula-plugins "cpu-usage ram-usage ssh-session network-bandwidth"
     }
 
     set -g @dracula-show-powerline true
@@ -275,6 +325,7 @@ set -g @dracula-show-cpu-usage true
 
 # set -g @dracula-ram-usage-label "󰍛"
 set -g @dracula-ram-usage true
+
 set -g @dracula-ram-usage-colors "dark_purple white"
 set -g @dracula-show-ram-usage true
 
