added new session key

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,6 +26,7 @@ bind W run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
 # Help screen: rebind list-keys window into a new pane
 bind-key ? split-window -h 'exec tmux list-keys | fzf-tmux -p80%,80%'
 
+bind-key S command-prompt -p "New session name:" "new-session -s '%%'"
 
 # syntax highlighting in Vim
 # set -g terminal-overrides ",xterm-256color:Tc"
