--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -101,9 +101,8 @@ if-shell "test -f $HOME/.tmux.conf.local "source $HOME/.tmux.conf.local
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
+set -g @plugin 'kristijan/tmux-fzf-pane-switch'
 # set -g @plugin 'shivamashtikar/tmux-onedark-theme'
-set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'fcsonline/tmux-thumbs'
 
 
 bind-key | split-window -h -c '#{pane_current_path}' # normally prefix-%
