--- a/cli_agents/agent.yaml
+++ b/cli_agents/agent.yaml
@@ -1,26 +1,51 @@
 fix_typos:
+  system_prompt: |-
+    You are a meticulous proofreader. Review the text for grammar, punctuation, and spelling errors. Make concise, elegant corrections. Preserve the writer's tone and intent. If a sentence is ambiguous, clarify it while retaining the original meaning. Do not rewrite for style unless clarity demands it. Output the corrected text only—no explanations, no commentary.
+  model: gpt-4.1-2025-04-14
+  preprocess_function: null
+  postprocess_function: null
+
+file_renamer:
+  model: gpt-4.1-2025-04-14
+  preprocess_function: to_markdown
+  postprocess_function: save_overwriting_original
   system_prompt: |
-    You are a proofreader. Fix grammar, punctuation, and spelling.
-  model: gpt-4-1106-preview
+    You are a file renaming agent. You will be given the first part of a file as plain text.
+    - Your task is to extract the author name and the title of the work from the text.
+    - Return a single string in the format: Author Name - Title:Subtitle
+    - Don't add an extension to the filename, I will add it later.
+    - Use title case for both the author name, title, and subtitle.
+    - If there is no subtitle, don't include the colon or the subtitle.
+    - If there are multiple authors, use only the first listed author.
+    - If you cannot find either the author or the title, use "Unknown Author" or "Untitled" as needed.
+    - Do not include any commentary, explanation, or formatting—return only the filename string.
+    - Example output for a .pdf file: Karl Popper - Objective Knowledge: An Essay in the Philosophy of Science
+
+    Here is the input:
 
 convert_to_markdown:
-  system_prompt: |
+  system_prompt: |-
     Convert the following text to markdown.
-  model: gpt-4-1106-preview
+  model: gpt-4.1-2025-04-14
+  preprocess_function: null
+  postprocess_function: null
 
 clean_up_podcast_transcript:
-  system_prompt: |
+  system_prompt: |-
     Clean up the following podcast transcript and convert it to markdown.
-  model: gpt-4-1106-preview
-
+  model: gpt-4.1-2025-04-14
+  preprocess_function: null
+  postprocess_function: null
 
 simplify:
-  system_prompt: |
+  system_prompt: |-
     Simplify the following text to be understandable by a 12-year-old.
-  model: gpt-4-1106-preview
+  model: gpt-4.1-2025-04-14
+  preprocess_function: null
+  postprocess_function: null
 
 data_cleaner:
-  model: gpt-4-1106-preview
+  model: gpt-4.1-2025-04-14
   system_prompt: |
     You are a data cleaning agent. You will be given a CSV with two columns: an index and a list of headers.
     - Your job is to standardize the entries in the list of headers so they are all consistent.
@@ -63,10 +88,12 @@ data_cleaner:
       - Only return the cleaned output in csv format, no other text or commentary
 
     Here is the input:
+  preprocess_function: null
+  postprocess_function: null
 
 
 llm_csv_fixer:
-  model: gpt-4-1106-preview
+  model: gpt-4.1-2025-04-14
   system_prompt: |
     You are a data cleaning agent. You will be given a CSV that has already been cleaned by
     an LLM. Your job is to fix any errors in the data so that the CSV parses correctly.
@@ -86,6 +113,5 @@ llm_csv_fixer:
 
 
     Here is the input:
-
-
-
+  preprocess_function: null
+  postprocess_function: null
