--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,15 +17,17 @@ bind-key -n M-N new-session -c "#{pane_current_path}"
 # toggle
 bind-key / next-layout
 # Quick view of processes
-bind-key h display-popup -E -h 95% -w 95% -x 5% 'htop -t -u "$(whoami)"'
+bind-key H display-popup -E -h 95% -w 95% -x C -y C 'htop -t'
 # bind-key h display-popup -E -h 95% -w 95% -x 5% 'htop -t -u "$(whoami)" -p "$(pgrep -vfd, $HTOP_FILTER)"'
 
 bind-key g display-popup -E -h 95% -w 60% -x C -y C 'watch -n 1 nvidia-smi'
-bind W run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
+# bind W run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
 
 # Help screen: rebind list-keys window into a new pane
 bind-key ? split-window -h 'exec tmux list-keys | fzf-tmux -p80%,80%'
 
+
+# bind-key s display-popup -E -h 95% -w 60% -x C -y C "/home/vaden/.tmux/plugins/tmux-fzf-pane-switch/select_pane.sh true center,70%,80% right,,,nowrap 'pane_id session_name window_name pane_title pane_current_command'"
 
 # syntax highlighting in Vim
 # set -g terminal-overrides ",xterm-256color:Tc"
@@ -62,7 +64,7 @@ bind -T popup WheelDownPane if-shell -F -t = "#{?pane_in_mode,1,0}" "send-keys -
 # set -g mouse off
 set -g mouse on
 
-set -s set-clipboard on
+# set -s set-clipboard on
 set -g allow-passthrough
 
 
@@ -100,9 +102,13 @@ if-shell "test -f $HOME/.tmux.conf.local "source $HOME/.tmux.conf.local
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
-# set -g @plugin 'shivamashtikar/tmux-onedark-theme'
-set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'shivamashtikar/tmux-onedark-theme'
+set -g @plugin 'kristijan/tmux-fzf-pane-switch'
+
+
+# bind W run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
+# bind s run-shell -b "/home/vaden/.tmux/plugins/tmux-fzf-pane-switch/select_pane.sh true center,70%,80% right,,,nowrap 'pane_id session_name window_name pane_title pane_current_command'"
+# set -g @fzf_pane_switch_bind-key "prefix + w"
 
 
 bind-key | split-window -h -c '#{pane_current_path}' # normally prefix-%
@@ -216,7 +222,6 @@ bind -T off F12 \
 
 wg_is_keys_off="#{?#{==:#(tmux show-option -qv key-table),off},#[reverse]OFF,}"
 
-# wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 
 set -g status-right "$wg_is_keys_off #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host"
 
@@ -346,7 +351,7 @@ set -g @dracula-show-flags false
 set -g @dracula-refresh-rate 2
 set -g @dracula-border-contrast true
 
-run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+# run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 set -g @thumbs-command 'echo -n {} | copy'
 set -g @thumbs-reverse enabled
 set -g @thumbs-unique enabled
