added new tmux functionality
- now has sidepanel popup

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
- # vim:ft=conf:
+# vim:ft=conf:
 
 # Primer: https://danielmiessler.com/study/tmux/
 # Tmux for mere mortals: https://zserge.com/posts/tmux/
@@ -13,6 +13,36 @@ bind-key -n "M-'" split-window -h -c "#{pane_current_path}"
 bind-key -n M-/ split-window -v -c "#{pane_current_path}"
 bind-key -n M-n new-window -c "#{pane_current_path}"
 bind-key -n M-N new-session -c "#{pane_current_path}"
+
+
+# Sidepanel toggle (VSCode-style)
+# Store the sidepanel pane ID in a user option
+set -g @sidepanel-pane-id ""
+
+# Sidepanel toggle (VSCode-style) - persistent popup
+# Store the sidepanel session name in a user option
+set -g @sidepanel-session ""
+
+# Toggle sidepanel with L (prefix+L)
+# bind-key L display-popup "tmux new-session -A -s sidepanel"
+
+bind-key L if-shell -F '#{==:#{session_name},sidepanel}' {
+    # If we're already in the sidepanel session, detach
+    detach-client
+} {
+    # If sidepanel session exists, attach to it; otherwise create new one
+    if-shell -F '#{session_exists:sidepanel}' {
+        attach-session -t sidepanel
+    } {
+        display-popup -E -h 95% -w 95% -x C -y C "tmux new-session -A -s sidepanel"
+    }
+}
+
+
+# bind-key -n M-l if-shell -F '#{?@sidepanel-pane-id,#{@sidepanel-pane-id},}' \
+#     'kill-pane -t "#{@sidepanel-pane-id}" ; set -u @sidepanel-pane-id' \
+#     'split-window -h -c "#{pane_current_path}" -P -F "#{pane_id}" ; set -g @sidepanel-pane-id "#{pane_id}" ; resize-pane -x 30%'
+
 
 # toggle
 bind-key / next-layout
@@ -158,38 +188,6 @@ bind-key -r '<' swap-window -d -t '{previous}' # Move window left.
 bind-key -r '>' swap-window -d -t '{next}' # Move window right.
 
 
-# set -g @dracula-colors "
-# # Dracula Color Pallette
-# white='#f8f8f2'
-# gray='#44475a'
-# dark_gray='#282a36'
-# light_purple='#bd93f9'
-# dark_purple='#6272a4'
-# cyan='#8be9fd'
-# green='#50fa7b'
-# orange='#ffb86c'
-# red='#ff5555'
-# pink='#ff79c6'
-# yellow='#f1fa8c'
-# "
-
-set -g @dracula-colors "
-foreground='#ffffff'
-background='#002451'
-highlight='#003f8e'
-status_line='#00346e'
-comment='#7285b7'
-red='#ff9da4'
-orange='#ffc58f'
-yellow='#ffeead'
-green='#d1f1a9'
-aqua='#99ffff'
-blue='#bbdaff'
-purple='#ebbbff'
-pane='#4d5057'
-"
-
-
 #Variables
 
 color_status_text="colour245"
@@ -221,6 +219,24 @@ wg_is_keys_off="#{?#{==:#(tmux show-option -qv key-table),off},#[reverse]OFF,}"
 
 set -g status-right "$wg_is_keys_off #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host"
 
+# Load Dracula theme configuration
+
+# Dracula color palette
+set -g @dracula-colors "
+foreground='#ffffff'
+background='#002451'
+highlight='#003f8e'
+status_line='#00346e'
+comment='#7285b7'
+red='#ff9da4'
+orange='#ffc58f'
+yellow='#ffeead'
+green='#d1f1a9'
+aqua='#99ffff'
+blue='#bbdaff'
+purple='#ebbbff'
+pane='#4d5057'
+"
 
 # Detect if we're running remotely via SSH
 if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
@@ -246,7 +262,7 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     set -g @dracula-show-powerline true
 
     # Local icon (laptop) + session name
-    set -g @dracula-show-left-icon ""
+    set -g @dracula-show-left-icon ""
 
     # Synchronize indicator settings
     set -g @dracula-synchronize-label "󰓦"
@@ -258,7 +274,7 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     set -g @dracula-cpu-usage-colors "pink dark_gray"
 
     # RAM usage settings
-    set -g @dracula-ram-usage-label ""
+    set -g @dracula-ram-usage-label ""
     # set -g @dracula-ram-usage-label "󰍛"
     set -g @dracula-ram-usage-colors "cyan dark_gray"
 
@@ -279,44 +295,14 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     # set -g @dracula-show-location true
 }
 
-# ethernet: 󰈀 󰒪 󰒍 󰌗 󰌘
-# offline: 󰖪  󱍢
-# wifi:      󰖩  󰘊 󰒢
-# 󰣀
-
-#
-# Available colors for Dracula widgets:
-# - dark_gray
-# - gray
-# - light_purple
-# - dark_purple
-# - cyan
-# - green
-# - orange
-# - red
-# - pink
-# - yellow
-# - white
-# - black
-# - purple
-# - light_gray
-# - blue
-# - dark_blue
-# - background (the default background color)
-# - foreground (the default foreground color)
-#
-# Each widget can be customized with the format:
-# set -g @dracula-[widget]-colors "[background] [foreground]"
-
-
 # Common visual settings
 set -g @dracula-gpu-power-draw-colors "red dark_gray"
 set -g @dracula-gpu-ram-usage-colors "orange dark_gray"
 set -g @dracula-gpu-usage-colors "yellow dark_gray"
 
-
 set -g @dracula-network-colors "pink dark_gray"
 set -g @dracula-network-bandwidth-interval 1
+
 # Shared settings for both environments
 # CPU and RAM display settings
 set -g @dracula-cpu-usage-label "󰻠"
@@ -330,22 +316,22 @@ set -g @dracula-ram-usage true
 set -g @dracula-ram-usage-colors "dark_purple white"
 set -g @dracula-show-ram-usage true
 
-set -g @dracula-ram-usage-label ""
+set -g @dracula-ram-usage-label ""
 
 set -g @dracula-gpu-power-label "󰢮"
 set -g @dracula-gpu-usage-label "󰢮"
 set -g @dracula-gpu-vram-label "󰢮"
 
-
 set -g @dracula-network-ethernet-label "󰈀 Eth"
 set -g @dracula-network-offline-label "󱍢 "
-set -g @dracula-network-wifi-label ""
+set -g @dracula-network-wifi-label ""
 
 set -g @dracula-show-left-sep ""
 set -g @dracula-show-right-sep ""
 set -g @dracula-show-flags false
 set -g @dracula-refresh-rate 2
 set -g @dracula-border-contrast true
+
 
 # run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 set -g @thumbs-command 'echo -n {} | copy'
