--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -262,7 +262,7 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     set -g @dracula-show-powerline true
 
     # Local icon (laptop) + session name
-    set -g @dracula-show-left-icon ""
+    set -g @dracula-show-left-icon "\uf179"
 
     # Synchronize indicator settings
     set -g @dracula-synchronize-label "󰓦"
