changed tmux widgets

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -237,7 +237,7 @@ blue='#bbdaff'
 purple='#ebbbff'
 pane='#4d5057'
 "
-
+# set -g @dracula-cpu-arch-label "󰍛 "
 # Detect if we're running remotely via SSH
 if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
     # Remote configuration (Ubuntu with GPU)
@@ -245,10 +245,10 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
     # Check if nvidia-smi is available for GPU metrics
     if-shell "command -v nvidia-smi" {
-        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session network-bandwidth"
+        set -g @dracula-plugins "cwd cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session network-bandwidth network"
     } {
         # Fallback for remote systems without GPU
-        set -g @dracula-plugins "cpu-usage ram-usage ssh-session network-bandwidth"
+        set -g @dracula-plugins "cwd cpu-usage ram-usage ssh-session network-bandwidth network"
     }
 
     set -g @dracula-show-powerline true
@@ -258,41 +258,12 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 } {
     # Local configuration (MacBook)
     set -g @plugin 'dracula/tmux'
-    set -g @dracula-plugins "synchronize cpu-usage ram-usage weather time battery"
+    set -g @dracula-plugins "cwd cpu-usage ram-usage time battery network"
     set -g @dracula-show-powerline true
 
     # Local icon (laptop) + session name
     set -g @dracula-show-left-icon "\uf179"
 
-    # Synchronize indicator settings
-    set -g @dracula-synchronize-label "󰓦"
-    set -g @dracula-synchronize-indicator "sync"
-    set -g @dracula-synchronize-colors "green dark_gray"
-
-    # CPU usage settings
-    set -g @dracula-cpu-usage-label "󰻠"
-    set -g @dracula-cpu-usage-colors "pink dark_gray"
-
-    # RAM usage settings
-    set -g @dracula-ram-usage-label ""
-    # set -g @dracula-ram-usage-label "󰍛"
-    set -g @dracula-ram-usage-colors "cyan dark_gray"
-
-    # Battery settings
-    set -g @dracula-battery-label "󰁹"
-    set -g @dracula-battery-colors "green dark_gray"
-    set -g @dracula-battery-style "percentage"
-    set -g @dracula-show-battery-percentage true
-
-    # Time settings
-    set -g @dracula-time-colors "orange dark_gray"
-
-    # Weather settings
-    set -g @dracula-weather-label "󰖐"
-    set -g @dracula-weather-colors "blue dark_gray"
-    set -g @dracula-fixed-location "Vancouver"
-    # set -g @dracula-show-fahrenheit false
-    # set -g @dracula-show-location true
 }
 
 # Common visual settings
@@ -300,31 +271,50 @@ set -g @dracula-gpu-power-draw-colors "red dark_gray"
 set -g @dracula-gpu-ram-usage-colors "orange dark_gray"
 set -g @dracula-gpu-usage-colors "yellow dark_gray"
 
-set -g @dracula-network-colors "pink dark_gray"
+set -g @dracula-network-colors "status_line white"
+set -g @dracula-network-ethernet-label "󰈀 Eth"
+set -g @dracula-network-offline-label "󱍢 "
+set -g @dracula-network-wifi-label " "
+
 set -g @dracula-network-bandwidth-interval 1
 
-# Shared settings for both environments
-# CPU and RAM display settings
+# Synchronize indicator settings
+set -g @dracula-synchronize-label "󰓦"
+set -g @dracula-synchronize-indicator "sync"
+set -g @dracula-synchronize-colors "green dark_gray"
+
+# CPU usage settings
 set -g @dracula-cpu-usage-label "󰻠"
+set -g @dracula-cpu-usage-colors "pink dark_gray"
+
+# RAM usage settings
+set -g @dracula-ram-usage-label "𖣘 "
+set -g @dracula-ram-usage-colors "cyan dark_gray"
+
+# Battery settings
+set -g @dracula-battery-label "🔋"
+set -g @dracula-battery-colors "green dark_gray"
+set -g @dracula-battery-style "percentage"
+set -g @dracula-show-battery-percentage true
+
+# Time settings
+set -g @dracula-time-colors "orange dark_gray"
+
+# CPU and RAM display settings
+set -g @dracula-cpu-usage-label "🎛 "
 set -g @dracula-cpu-display-load true
 set -g @dracula-cpu-usage-colors "dark_gray white"
 set -g @dracula-show-cpu-usage true
 
 # set -g @dracula-ram-usage-label "󰍛"
 set -g @dracula-ram-usage true
-
 set -g @dracula-ram-usage-colors "dark_purple white"
 set -g @dracula-show-ram-usage true
 
-set -g @dracula-ram-usage-label ""
 
 set -g @dracula-gpu-power-label "󰢮"
 set -g @dracula-gpu-usage-label "󰢮"
 set -g @dracula-gpu-vram-label "󰢮"
-
-set -g @dracula-network-ethernet-label "󰈀 Eth"
-set -g @dracula-network-offline-label "󱍢 "
-set -g @dracula-network-wifi-label ""
 
 set -g @dracula-show-left-sep ""
 set -g @dracula-show-right-sep ""
