--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -245,10 +245,10 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
     # Check if nvidia-smi is available for GPU metrics
     if-shell "command -v nvidia-smi" {
-        set -g @dracula-plugins "cwd cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session network-bandwidth network"
+        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage network-bandwidth ssh-session network"
     } {
         # Fallback for remote systems without GPU
-        set -g @dracula-plugins "cwd cpu-usage ram-usage ssh-session network-bandwidth network"
+        set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth ssh-session network"
     }
 
     set -g @dracula-show-powerline true
@@ -275,6 +275,7 @@ set -g @dracula-network-colors "status_line white"
 set -g @dracula-network-ethernet-label "󰈀 Eth"
 set -g @dracula-network-offline-label "󱍢 "
 set -g @dracula-network-wifi-label " "
+set -g @dracula-ssh-session-colors "status_line white"
 
 set -g @dracula-network-bandwidth-interval 1
 
