--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -245,10 +245,10 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 
     # Check if nvidia-smi is available for GPU metrics
     if-shell "command -v nvidia-smi" {
-        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage network-bandwidth ssh-session network"
+        set -g @dracula-plugins "cpu-usage ram-usage gpu-usage gpu-ram-usage ssh-session network-bandwidth network"
     } {
         # Fallback for remote systems without GPU
-        set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth ssh-session network"
+        set -g @dracula-plugins "cpu-usage ram-usage ssh-session network-bandwidth network"
     }
 
     set -g @dracula-show-powerline true
@@ -258,7 +258,7 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 } {
     # Local configuration (MacBook)
     set -g @plugin 'dracula/tmux'
-    set -g @dracula-plugins "cwd cpu-usage ram-usage time battery network"
+    set -g @dracula-plugins "cpu-usage ram-usage time network battery"
     set -g @dracula-show-powerline true
 
     # Local icon (laptop) + session name
@@ -267,8 +267,8 @@ if-shell '[ -n "$SSH_CLIENT" ] || [ -n "$SSH_TTY" ]' {
 }
 
 # Common visual settings
-set -g @dracula-gpu-power-draw-colors "red dark_gray"
-set -g @dracula-gpu-ram-usage-colors "orange dark_gray"
+
+set -g @dracula-gpu-ram-usage-colors "yellow dark_gray"
 set -g @dracula-gpu-usage-colors "yellow dark_gray"
 
 set -g @dracula-network-colors "status_line white"
@@ -278,19 +278,16 @@ set -g @dracula-network-wifi-label " "
 set -g @dracula-ssh-session-colors "status_line white"
 
 set -g @dracula-network-bandwidth-interval 1
+set -g @dracula-network-bandwidth-colors "status_line white"
+set -g @dracula-network-bandwidth-show-interface true
+set -g @dracula-network-bandwidth-label "🌐"
 
 # Synchronize indicator settings
 set -g @dracula-synchronize-label "󰓦"
 set -g @dracula-synchronize-indicator "sync"
 set -g @dracula-synchronize-colors "green dark_gray"
 
-# CPU usage settings
-set -g @dracula-cpu-usage-label "󰻠"
-set -g @dracula-cpu-usage-colors "pink dark_gray"
 
-# RAM usage settings
-set -g @dracula-ram-usage-label "𖣘 "
-set -g @dracula-ram-usage-colors "cyan dark_gray"
 
 # Battery settings
 set -g @dracula-battery-label "🔋"
@@ -304,18 +301,22 @@ set -g @dracula-time-colors "orange dark_gray"
 # CPU and RAM display settings
 set -g @dracula-cpu-usage-label "🎛 "
 set -g @dracula-cpu-display-load true
-set -g @dracula-cpu-usage-colors "dark_gray white"
 set -g @dracula-show-cpu-usage true
-
-# set -g @dracula-ram-usage-label "󰍛"
-set -g @dracula-ram-usage true
-set -g @dracula-ram-usage-colors "dark_purple white"
 set -g @dracula-show-ram-usage true
+set -g @dracula-ram-usage true
+set -g @dracula-ram-usage-label "𖣘 "
+set -g @dracula-cpu-usage-colors "dark_gray white"
+set -g @dracula-ram-usage-colors "dark_gray white"
+
+# # RAM usage settings
+# set -g @dracula-ram-usage-colors "cyan dark_gray"
+
+
 
 
 set -g @dracula-gpu-power-label "󰢮"
-set -g @dracula-gpu-usage-label "󰢮"
-set -g @dracula-gpu-vram-label "󰢮"
+set -g @dracula-gpu-usage-label "🚀"
+set -g @dracula-gpu-vram-label "🎮"
 
 set -g @dracula-show-left-sep ""
 set -g @dracula-show-right-sep ""
